Add: exclude list article from main list

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "362955"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " 'ชลิตา_เฟื่องอารมณ์']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[['บรั่นดี', 'วงดนตรี'], ['บรั่นดี']]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "353833"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        " 'ท่าอากาศยานนานาชาติพาโร']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "465912"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        " 'อาบุลฮะซันบานีศาดร์']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "346494"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        " 'อีวานเคร็ก']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "5011"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        " 'รายชื่อเมืองหลวงทางประวัติศาสตร์ของอียิปต์']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check if it is a list article in rule-based\n",
+    "def is_list_article(title):\n",
+    "    # a few articles have miss-tone-mark\n",
+    "    # -> check without tone-mark\n",
+    "    title_no_tone = pythainlp.util.remove_tonemark(title)\n",
+    "    \n",
+    "    return (title_no_tone.startswith(\"รายการ\")\n",
+    "        or title_no_tone.startswith(\"รายชือ\")\n",
+    "        or title_no_tone.startswith(\"รายพระ\")\n",
+    "        or title_no_tone.startswith(\"รายนาม\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +914,7 @@
        "57"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,18 +923,8 @@
     "not_list = []\n",
     "\n",
     "for title in raay:\n",
-    "    # a few articles have miss-tone-mark\n",
-    "    # -> check without tone-mark\n",
-    "    title_no_tone = pythainlp.util.remove_tonemark(title)\n",
     "    \n",
-    "    #check if it is a list article in rule-based\n",
-    "    if (title_no_tone.startswith(\"รายการ\")\n",
-    "        or title_no_tone.startswith(\"รายชือ\")\n",
-    "        or title_no_tone.startswith(\"รายพระ\")\n",
-    "        or title_no_tone.startswith(\"รายนาม\")):\n",
-    "        \n",
-    "        #it's a list-article\n",
-    "        # -> exclude (skip)\n",
+    "    if is_list_article(title):\n",
     "        continue\n",
     "    \n",
     "    not_list.append(title)\n",
@@ -926,65 +934,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['รายาประไหมสุหรีอากงตวนกูฮัจญะห์ฮามินะห์ฮาไมดุน',\n",
-       " 'รายได้',\n",
-       " 'รายปุระ',\n",
-       " 'รายงานการประชุม',\n",
+       "['รายาแห่งรัฐปะลิส',\n",
+       " 'รายกอวิช',\n",
+       " 'รายาอูงู',\n",
+       " 'รายาห์',\n",
+       " 'รายงานเฮิร์ช',\n",
+       " 'รายหัว',\n",
+       " 'รายได้ประชาชาติ',\n",
        " 'รายได้มูลฐาน',\n",
+       " 'รายงานเคส',\n",
+       " 'รายละเอียดพระราชพิธีพระราชทานเพลิงพระศพสมเด็จเจ้าฟ้าฯกรมหลวงนราธิวาสราชนครินทร์',\n",
+       " 'รายงานกรณี',\n",
+       " 'รายงานพิเศษว่าด้วยภาวะโลกร้อน1.5°C',\n",
+       " 'รายงานประจำปี',\n",
+       " 'รายากับมังกรตัวสุดท้าย',\n",
+       " 'รายงานเค้ส',\n",
+       " 'รายาบีรู',\n",
+       " 'รายงานกรุงบูดาเปสต์เรื่องการประกันความมั่นคง',\n",
+       " 'รายงานความสุขโลก',\n",
+       " 'รายงานเฮิรส์ช',\n",
+       " 'รายได้พื้นฐานถ้วนหน้าในประเทศบราซิล',\n",
+       " 'รายงานพิเศษว่าด้วยภาวะโลกร้อน',\n",
        " 'รายากูนิง',\n",
        " 'รายาฮีเจา',\n",
-       " 'รายชิ่อสนามกีฬาเรียงตามความจุ',\n",
-       " 'รายงานกรณี',\n",
-       " 'รายาผิวขาว',\n",
-       " 'รายคอวิช',\n",
-       " 'รายงานอาหาร',\n",
-       " 'รายงานคนไข้',\n",
-       " 'รายงานผู้ป่วย',\n",
-       " 'รายาบีรู',\n",
-       " 'รายยวา',\n",
-       " 'รายงานเฮิรส์ช',\n",
-       " 'รายูวันปูเลาเกอลาปา',\n",
-       " 'รายละเอียดพระราชพิธีถวายพระเพลิงพระบรมศพพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช',\n",
-       " 'รายาห์',\n",
-       " 'รายงานกรุงบูดาเปสต์เรื่องการประกันความมั่นคง',\n",
-       " 'รายงานทีหลัง',\n",
-       " 'รายงานอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
-       " 'รายงานเค้ส',\n",
-       " 'รายาแห่งรัฐปะลิส',\n",
+       " 'รายงานการประชุม',\n",
        " 'รายงานเรื่องอาหารโภชนาการการออกกำลังกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
-       " 'ราย',\n",
-       " 'รายาแห่งซาราวัก',\n",
-       " 'รายงานประจำปี',\n",
-       " 'รายงานเรื่องอาหาร',\n",
-       " 'รายงานเฮิร์ช',\n",
-       " 'รายากับมังกรตัวสุดท้าย',\n",
-       " 'รายาแห่งซาราวะก์',\n",
-       " 'รายละเอียดพระราชพิธีพระราชทานเพลิงพระศพ',\n",
-       " 'รายงานเรื่องอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
-       " 'รายา',\n",
-       " 'รายได้พื้นฐานถ้วนหน้าในประเทศบราซิล',\n",
-       " 'รายได้ประชาชาติ',\n",
+       " 'รายงานคนไข้',\n",
        " 'รายาฮีเยา',\n",
+       " 'ราย',\n",
        " 'รายวนปูเลาเกอราปา',\n",
-       " 'รายวนปูเลาเกอลาปา',\n",
-       " 'รายนานนท์',\n",
-       " 'รายาประไหมสุหรีอากง',\n",
-       " 'รายงานเคส',\n",
-       " 'รายงานความสุขโลก',\n",
-       " 'รายาอูงู',\n",
-       " 'รายหัว',\n",
        " 'รายานนท์',\n",
+       " 'รายาผิวขาว',\n",
+       " 'รายละเอียดพระราชพิธีพระราชทานเพลิงพระศพ',\n",
+       " 'รายได้',\n",
+       " 'รายาประไหมสุหรีอากง',\n",
+       " 'รายนานนท์',\n",
+       " 'รายูวันปูเลาเกอลาปา',\n",
+       " 'รายงานทีหลัง',\n",
+       " 'รายละเอียดพระราชพิธีถวายพระเพลิงพระบรมศพพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช',\n",
+       " 'รายาประไหมสุหรีอากงตวนกูฮัจญะห์ฮามินะห์ฮาไมดุน',\n",
+       " 'รายาแห่งซาราวัก',\n",
+       " 'รายงานอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
+       " 'รายาแห่งซาราวะก์',\n",
        " 'รายงานค่าใช้จ่าย',\n",
-       " 'รายได้พื้นฐาน']"
+       " 'รายงานเรื่องอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
+       " 'รายงานอาหาร',\n",
+       " 'รายวนปูเลาเกอลาปา',\n",
+       " 'รายชิ่อสนามกีฬาเรียงตามความจุ',\n",
+       " 'รายได้พื้นฐาน',\n",
+       " 'รายปุระ',\n",
+       " 'รายงานพิเศษว่าด้วยภาวะโลกร้อน1.5°ซ.']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,6 +1000,152 @@
    "source": [
     "#check\n",
     "get_samples(not_list, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "341540"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# exclude from the main list\n",
+    "titles_temp = set()\n",
+    "for title in titles:\n",
+    "    if not is_list_article(title):\n",
+    "        titles_temp.add(title)\n",
+    "        \n",
+    "titles = titles_temp\n",
+    "len(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ฮูมัต',\n",
+       " 'ริงโกะอูเอดะ',\n",
+       " 'ไอโอเนีย',\n",
+       " 'เซอร์ไวเวอร์ฟิจิ',\n",
+       " 'ฮวนมิโร',\n",
+       " 'พายุไต้ฝุ่นนิดา',\n",
+       " 'ซีมาน',\n",
+       " 'สมเด็จพระจักรพรรดิแห่งรัสเซีย',\n",
+       " 'นกจมูกหลอดยักษ์ขั้วโลกใต้',\n",
+       " 'สโลนเกรตวอลล์',\n",
+       " 'นักบุญซาราห์',\n",
+       " 'หม่อมเจ้าวัฒนา',\n",
+       " 'ท่าสาทร',\n",
+       " 'รัฐเอกราชซามัวในโอลิมปิกฤดูร้อน1996',\n",
+       " 'วัดลาดหญ้าแพรก',\n",
+       " 'พรอดิวซ์แคมป์2020',\n",
+       " 'ชู้รักเลดี้แชตเตอร์เลย์',\n",
+       " 'รามาวตาร',\n",
+       " 'ภูมิแผ่นดินนวมินทร์มหาราชา',\n",
+       " 'สมิงพยู',\n",
+       " 'สำนักงานการบังคับใช้กฎหมายยาเสพติดแห่งประเทศฟิลิปปินส์',\n",
+       " 'ดำรงดิศ',\n",
+       " 'ซาร์อีวานที่5',\n",
+       " 'กรสวัสดิ์',\n",
+       " 'บักกวย',\n",
+       " 'สโมสรฟุตบอลกองเรือยุทธการ',\n",
+       " 'หลวงพ่อวิริยังค์สิรินธโร',\n",
+       " 'เจือง',\n",
+       " 'สุสานแห่งฮาลิคาร์นัสเซิส',\n",
+       " 'กีฬาโปโลน้ำในซีเกมส์2013',\n",
+       " 'จิงหยู',\n",
+       " 'เอเชียนพาราเกมส์',\n",
+       " 'กรกฏธนภัทร',\n",
+       " 'สุทิน',\n",
+       " 'ลิปกลอส',\n",
+       " 'แบบจำลองการสะท้อนแบบฟ็อง',\n",
+       " 'หมู่เกาะเวอร์จินของสหรัฐอเมริกาในโอลิมปิกฤดูร้อน2012',\n",
+       " 'เมย์กิว',\n",
+       " 'วัดบางพลีใหญ่ใน',\n",
+       " 'อิ้งค์',\n",
+       " 'วัดห้วยลี่จังหวัดสระบุรี',\n",
+       " 'ทิมมอร์เฮาส์',\n",
+       " 'เธอเอาใจฉันไป',\n",
+       " 'เกาะเชียงจานเชียน',\n",
+       " 'จางจื่ออี้',\n",
+       " 'ประเทศปาเลาในโอลิมปิกเยาวชนฤดูร้อน2010',\n",
+       " 'โอชอนิสซี',\n",
+       " 'อีมิลเฮสกีย์',\n",
+       " 'ภาษาเมเกรเลีย',\n",
+       " 'อะเลกเซย์กูโรแพทกิน',\n",
+       " 'คอนสตันติน',\n",
+       " 'นนทรีย์',\n",
+       " 'นาโชบิดัล',\n",
+       " 'วัคซีนโควิด-19ของไฟเซอร์-ไบออนเทค',\n",
+       " 'ชีดา',\n",
+       " 'ระหว่างเราและดอกไม้ไฟ',\n",
+       " 'แนวร่วมปลดปล่อยแห่งชาติประชาชนเขมร',\n",
+       " 'อ.บ้านม่วง',\n",
+       " 'แมนซูร์',\n",
+       " 'เส้นโค้งคีลิง',\n",
+       " 'พระอุมา',\n",
+       " 'โจไกซัง',\n",
+       " 'เจ้าชายไฮน์ริช',\n",
+       " 'วากามูราซากิ',\n",
+       " 'เหตุรถบรรทุกชนในรัฐเชียปัส',\n",
+       " 'ปวีร์',\n",
+       " 'กระทรวงโภชนาการและการเกษตรไรช์',\n",
+       " 'เลปลูสกร็องซูกเซเดอเซลีนดียง',\n",
+       " 'เรนาโตคอนสตันติโน',\n",
+       " 'ฟลัค',\n",
+       " '52ปีก่อนคริสตกาล',\n",
+       " 'เจเนอรัลมอเตอร์',\n",
+       " 'ไทยแลนด์มาสเตอร์',\n",
+       " 'แฟนปะทะทีมโปรด',\n",
+       " 'มิซากินาโกะ',\n",
+       " 'ซีซ่าร์',\n",
+       " 'คาสเซิลวาเนียIIเบลมอนต์สรีเวงก์',\n",
+       " 'เจ้าชายอาซิมบินนาเยฟ',\n",
+       " 'มนุษย์',\n",
+       " 'สัดส่วนทอง',\n",
+       " 'ยุทธการที่คาร์คอฟครั้งที่',\n",
+       " 'พระศรีรังคนาถ',\n",
+       " 'พานิชภักดิ์',\n",
+       " 'สุภาว์',\n",
+       " 'นันชะระ',\n",
+       " 'ผักกระชับ',\n",
+       " 'สนามบินนานาชาติจอห์นเอฟ.เคนเนดี',\n",
+       " 'หงส์ขาวคอดำ',\n",
+       " 'โรคปิแอร์-โรแบง',\n",
+       " 'โทแจจ็อง',\n",
+       " 'ประเทศนอร์เวย์ในโอลิมปิกฤดูร้อน2020',\n",
+       " 'เซนต์โล',\n",
+       " 'รถไฟใต้ดินหนานจิงสายS6',\n",
+       " 'หม่อมราชวงศ์ชิต',\n",
+       " 'ค.ศ.1255',\n",
+       " 'โมเลกุลขนาดใหญ่',\n",
+       " 'หน่วยเอสโอเอส',\n",
+       " 'เชฟิกจาเฟโรวิช',\n",
+       " 'โอลิมปิกฤดูร้อน1968',\n",
+       " 'กีฬาสกีนอร์ดิกผสมในโอลิมปิกเยาวชนฤดูหนาว2020–ประเภทบุคคลชายนอร์มอลฮิลล์6กิโลเมตร']"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_samples(titles)"
    ]
   },
   {
