Doc: show what colon used for

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "362955"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " 'ชลิตา_เฟื่องอารมณ์']"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[['บรั่นดี', 'วงดนตรี'], ['บรั่นดี']]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "353833"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        " 'ท่าอากาศยานนานาชาติพาโร']"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "465912"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        " 'อาบุลฮะซันบานีศาดร์']"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "346494"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        " 'อีวานเคร็ก']"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "1465"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['โจโจ้ล่าข้ามศตวรรษ:เครซี่ไดอมอนด์ด้วยรักและใจสลาย',\n",
+       " 'เดอะเลเจนด์ออฟเซลดา:อะลิงก์ทูเดอะแพสต์',\n",
+       " 'เวียงกุมกาม:นครใต้พิภพ',\n",
+       " 'ยอดนักสืบจิ๋วโคนัน:ฝ่าวิกฤติเรือรบมรณะ',\n",
+       " 'มาสค์ไรเดอร์ไฟซ์เดอะมูฟวี่:สงครามมนุษย์กลายพันธุ์',\n",
+       " 'อัสแซสซินส์ครีด:ลินนิเอจ',\n",
+       " 'ดาวน์:',\n",
+       " 'เอฟรีเดส์:',\n",
+       " 'สตาร์วอร์ส:เดอะแบดแบตช์',\n",
+       " 'สตาร์ไดรเวอร์:ทาคุโตะผู้เจิดจรัส',\n",
+       " 'เทคโอเวอร์:',\n",
+       " 'โททัลวอร์:',\n",
+       " 'คังโคเระ:',\n",
+       " 'รายชื่อตอนในเบ็นเท็น:อัลติเมทเอเลี่ยน',\n",
+       " 'เมทัลเกียร์โซลิด5:เดอะแฟนทอมเพน',\n",
+       " 'แบล็กพิงก์:เดอะเวอชวล',\n",
+       " 'เพอร์ฟูม:',\n",
+       " 'เอ็นเอ๊กซ์ทีเทคโอเวอร์:อาร์เอฟโวลูชั่น',\n",
+       " 'ลาพิวตา:',\n",
+       " 'สตาร์วอร์ส:โรกวัน',\n",
+       " 'เอาต์เบรก:',\n",
+       " 'สวิฟต์:',\n",
+       " 'ยอดนักสืบจิ๋วโคนัน:ปริศนาบนถนนสายมรณะ',\n",
+       " 'PoliceStory3:SuperCopวิ่งสู้ฟัด3',\n",
+       " 'เซอร์ไวเวอร์ปานามา:เกาะอัปยศ',\n",
+       " 'โปเกมอนเรนเจอร์:แชโดวส์ออฟอัลเมีย',\n",
+       " 'เดิร์จออฟเซอร์เบรัส:',\n",
+       " 'คอมมานด์แอนด์คองเคอร์:เจเนรัลส์',\n",
+       " 'เอจออฟมีโธโลจี:เดอะไททันส์',\n",
+       " 'วิแวร์:เดอะเบสท์ออฟ',\n",
+       " 'เดอะเลเจนด์ออฟเซลดา:เมเยอราส์แมสก์3D',\n",
+       " 'ฮอบบิท:',\n",
+       " 'กันดั้มบิลด์ไฟท์เตอร์ไทร:IslandWars',\n",
+       " 'ดราก้อนฟอร์ซ:โซลอง,อุลตร้าแมน',\n",
+       " 'ทูไลตส์:',\n",
+       " 'สตาร์เทรค:',\n",
+       " 'รายชื่อตอนCSI:Miami',\n",
+       " 'เดอะไลออนคิง:',\n",
+       " 'ดิเอลเดอร์สครอลล์สV:สกายริม',\n",
+       " 'นีดฟอร์สปีด:เดอะรัน',\n",
+       " 'รีซิสแตนซ์:',\n",
+       " 'ลิตเติลนีโม:เดอะดรีมมาสเตอร์',\n",
+       " 'เรฟโวลูชั่นส์:',\n",
+       " 'เดอะ100:อะแรงกิงออฟเดอะมอสต์อินฟลูเอนเชียลเพอร์เซินอินฮิสทรี',\n",
+       " 'อีวานเกเลียน:1.0กำเนิดใหม่วันพิพากษา',\n",
+       " 'เจเรมีสก็อตต์:เดอะพีเพิลส์ดีไซเนอร์',\n",
+       " 'บีอินเดอะมิกซ์:',\n",
+       " 'โซนิคโครนิเคิลส์:',\n",
+       " 'ดราฟต์:แฮกกิงอีดียู',\n",
+       " 'ทรี:']"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[title for title in titles if \":\" in title][:50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, definetly `:` used for subtitles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +832,7 @@
        "345587"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +960,7 @@
        " 'ศิษย์ไตรภูมิ']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +995,7 @@
        "4992"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1118,7 @@
        " 'รายนามองคมนตรีในรัชกาลสมเด็จพระเจ้าอยู่หัวมหาวชิราลงกรณ์']"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1165,7 @@
        "57"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1243,7 @@
        " 'รายได้พื้นฐานถ้วนหน้าในประเทศบราซิล']"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1264,7 @@
        "340652"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1390,7 @@
        " 'ประเทศเช็กเกียในพาราลิมปิกฤดูร้อน']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
