Doc: monks names

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -207,6 +207,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This also covers \"Include monks nicknames\"\n",
+    "> พระสงฆ์ไทยทรงสมณศักดิ์ ให้นำสมณศักดิ์หรือราชทินนามขึ้นต้น ตามด้วยวงเล็บชื่อและฉายา  \n",
+    "> พระพรหมคุณาภรณ์ (ประยุทธ์ ปยุตโต)  \n",
+    "> สมเด็จพระพุฒาจารย์ (โต พรหมรังสี)  \n",
+    "> สมเด็จพระพุฒาจารย์ (เกี่ยว อุปเสโณ)  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
@@ -1412,17 +1423,6 @@
     "https://th.wikipedia.org/wiki/%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B8%A2%E0%B8%A8%E0%B9%80%E0%B8%88%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B8%B2%E0%B8%A2%E0%B9%84%E0%B8%97%E0%B8%A2  \n",
     "\n",
     "**If this is rude, this should be altered**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Include monks nicknames\n",
-    "> พระสงฆ์ไทยทรงสมณศักดิ์ ให้นำสมณศักดิ์หรือราชทินนามขึ้นต้น ตามด้วยวงเล็บชื่อและฉายา  \n",
-    "> พระพรหมคุณาภรณ์ (ประยุทธ์ ปยุตโต)  \n",
-    "> สมเด็จพระพุฒาจารย์ (โต พรหมรังสี)  \n",
-    "> สมเด็จพระพุฒาจารย์ (เกี่ยว อุปเสโณ)  "
    ]
   },
   {
