See: shown articles starts with ประเทศ
seems there are not only country articles

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -1430,7 +1430,151 @@
    "metadata": {},
    "source": [
     "### Process country names\n",
-    "> ใช้ชื่อ \"ประเทศ...\" เช่น ประเทศญี่ปุ่น ดูเพิ่ม วิกิพีเดีย:โครงการวิกิประเทศ"
+    "> ใช้ชื่อ \"ประเทศ...\" เช่น ประเทศญี่ปุ่น ดูเพิ่ม วิกิพีเดีย:โครงการวิกิประเทศ\n",
+    "\n",
+    "There are \"ประเทศ...\" patterns and \"รัฐ\" patterns (such as Palestine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5976, 1488)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pratheet = [title for title in titles if title.startswith(\"ประเทศ\")]\n",
+    "rath = [title for title in titles if title.startswith(\"รัฐ\")]\n",
+    "\n",
+    "len(pratheet), len(rath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ประเทศโรมาเนีย',\n",
+       " 'ประเทศญี่ปุ่นในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศกัมพูชาในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศไลบีเรียในโอลิมปิก',\n",
+       " 'ประเทศบุรุนดีในโอลิมปิก',\n",
+       " 'ประเทศอินเดียในเครือจักรภพ',\n",
+       " 'ประเทศโบลิเวียในโอลิมปิกฤดูร้อน2024',\n",
+       " 'ประเทศโกตดิวัวร์ในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศสวิตเซอร์แลนด์ในโอลิมปิกฤดูร้อน1952',\n",
+       " 'ประเทศญี่ปุ่นในโอลิมปิกฤดูหนาว2014',\n",
+       " 'ประเทศไทยในพ.ศ.2400',\n",
+       " 'ประเทศอินเดียในเอเชียนเกมส์1951',\n",
+       " 'ประเทศอิรักในเอเชียนเกมส์2018',\n",
+       " 'ประเทศแคนาดาในพาราลิมปิกฤดูหนาว',\n",
+       " 'ประเทศยูเครน',\n",
+       " 'ประเทศตรินิแดดและโตเบโกในโอลิมปิกเยาวชนฤดูร้อน',\n",
+       " 'ประเทศอาเซอร์ไบจานในโอลิมปิกเยาวชน',\n",
+       " 'ประเทศกรีซในโอลิมปิกฤดูร้อน1988',\n",
+       " 'ประเทศเมียนมาร์',\n",
+       " 'ประเทศเม็กซิโกในโอลิมปิกฤดูร้อน2008',\n",
+       " 'ประเทศซูรินามในพาราลิมปิกฤดูร้อน2016',\n",
+       " 'ประเทศสวีเดนในโอลิมปิกเยาวชนฤดูร้อน',\n",
+       " 'ประเทศสเปนในโอลิมปิกฤดูหนาว1948',\n",
+       " 'ประเทศเกาหลีใต้ในโอลิมปิก',\n",
+       " 'ประเทศแคนาดาในโอลิมปิกฤดูร้อน1936',\n",
+       " 'ประเทศฟิลิปปินส์ในพาราลิมปิกฤดูร้อน2016',\n",
+       " 'ประเทศเม็กซิโกในโอลิมปิกฤดูร้อน1980',\n",
+       " 'ประเทศจีนในโอลิมปิก',\n",
+       " 'ประเทศเวียดนามในเอเชียนเกมส์2018',\n",
+       " 'ประเทศตองกาในโอลิมปิกฤดูร้อน2008',\n",
+       " 'ประเทศปานามาในโอลิมปิกฤดูร้อน1976',\n",
+       " 'ประเทศเนเธอร์แลนด์ในโอลิมปิกฤดูร้อน1996',\n",
+       " 'ประเทศบรูไนดารุสซาลามในโอลิมปิกฤดูร้อน2000',\n",
+       " 'ประเทศสาธารณรัฐโปรตุเกส',\n",
+       " 'ประเทศอิเควทอเรียลกินีในโอลิมปิกเยาวชนฤดูร้อน2010',\n",
+       " 'ประเทศทาจิกิสถานในโอลิมปิกฤดูร้อน2012',\n",
+       " 'ประเทศแคนาดาในโอลิมปิกฤดูร้อน1956',\n",
+       " 'ประเทศไทยในพ.ศ.2462',\n",
+       " 'ประเทศเลบานอนในโอลิมปิกเยาวชนฤดูร้อน2014',\n",
+       " 'ประเทศออสเตรเลียในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศมาลีในพาราลิมปิกฤดูร้อน',\n",
+       " 'ประเทศนอร์เวย์ในโอลิมปิกฤดูหนาว1972',\n",
+       " 'ประเทศฮังการีในโอลิมปิกฤดูหนาว1988',\n",
+       " 'ประเทศบาฮามาสในโอลิมปิกฤดูร้อน1984',\n",
+       " 'ประเทศคาซัคสถานในโอลิมปิกเยาวชนฤดูร้อน',\n",
+       " 'ประเทศเวียดนาม',\n",
+       " 'ประเทศแซมเบียในโอลิมปิกฤดูร้อน2016',\n",
+       " 'ประเทศแกมเบียในโอลิมปิกฤดูร้อน1984',\n",
+       " 'ประเทศบาฮามาสในโอลิมปิกเยาวชนฤดูร้อน2010',\n",
+       " 'ประเทศเลโซโทในโอลิมปิกฤดูร้อน1988',\n",
+       " 'ประเทศเวเนซุเอลาในโอลิมปิกฤดูร้อน2000',\n",
+       " 'ประเทศพม่าในโอลิมปิกฤดูร้อน1948',\n",
+       " 'ประเทศตรินิแดดและโตเบโกในโอลิมปิกฤดูร้อน1972',\n",
+       " 'ประเทศเซอร์เบียและมอนเตเนโกร',\n",
+       " 'ประเทศคาซัคสถานในโอลิมปิกเยาวชนฤดูหนาว2020',\n",
+       " 'ประเทศเปรู',\n",
+       " 'ประเทศมาเลเซียในโอลิมปิกเยาวชนฤดูร้อน2018',\n",
+       " 'ประเทศเนเธอร์แลนด์ในโอลิมปิกฤดูร้อน1992',\n",
+       " 'ประเทศเอสวาตีนีในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศแคนาดาในโอลิมปิกฤดูร้อน1964',\n",
+       " 'ประเทศเวียดนามในเอเชียนเกมส์ฤดูหนาว2017',\n",
+       " 'ประเทศคาซัคสถานในโอลิมปิกฤดูร้อน2016',\n",
+       " 'ประเทศปานามาในโอลิมปิกฤดูร้อน1928',\n",
+       " 'ประเทศไมโครนีเซียในโอลิมปิกเยาวชนฤดูร้อน2014',\n",
+       " 'ประเทศมองโกเลียในเอเชียนเกมส์2010',\n",
+       " 'ประเทศโคลอมเบียในพาราลิมปิกฤดูร้อน',\n",
+       " 'ประเทศอิรักในโอลิมปิกฤดูร้อน2012',\n",
+       " 'ประเทศสเปนในโอลิมปิกฤดูร้อน1996',\n",
+       " 'ประเทศสเปนในโอลิมปิกฤดูร้อน1988',\n",
+       " 'ประเทศเกรเนดาในโอลิมปิกฤดูร้อน',\n",
+       " 'ประเทศแกมเบียในพาราลิมปิกฤดูร้อน',\n",
+       " 'ประเทศโมร็อกโกในโอลิมปิกฤดูร้อน2000',\n",
+       " 'ประเทศไทยในซีเกมส์2003',\n",
+       " 'ประเทศมาเลเซียในซีเกมส์2023',\n",
+       " 'ประเทศออสเตรเลียในโอลิมปิกฤดูร้อน1948',\n",
+       " 'ประเทศอาร์มีเนียในโอลิมปิกฤดูร้อน2000',\n",
+       " 'ประเทศอำนาจนำภูมิภาค',\n",
+       " 'ประเทศมาเลเซีย',\n",
+       " 'ประเทศฟิลิปปินส์',\n",
+       " 'ประเทศบูร์กินาฟาโซในโอลิมปิกฤดูร้อน2008',\n",
+       " 'ประเทศอาร์เจนตินาในโอลิมปิกฤดูหนาว2018',\n",
+       " 'ประเทศนิวซีแลนด์ในโอลิมปิกฤดูร้อน2012',\n",
+       " 'ประเทศฮังการีในโอลิมปิกฤดูร้อน1996',\n",
+       " 'ประเทศแคนาดาในโอลิมปิกฤดูร้อน2004',\n",
+       " 'ประเทศคีร์กีซสถานในโอลิมปิกฤดูร้อน2024',\n",
+       " 'ประเทศแอนทีกาและบาร์บิวดาในโอลิมปิก',\n",
+       " 'ประเทศอิหร่านในโอลิมปิกเยาวชนฤดูร้อน2018',\n",
+       " 'ประเทศรัสเซียในโอลิมปิกฤดูร้อน2008',\n",
+       " 'ประเทศจีนในเอเชียนเกมส์ฤดูหนาว',\n",
+       " 'ประเทศบอสเนียและเฮอร์เซโกวีนาในโอลิมปิกฤดูร้อน2004',\n",
+       " 'ประเทศแคเมอรูนในโอลิมปิกฤดูร้อน2020',\n",
+       " 'ประเทศฟิจิในโอลิมปิก',\n",
+       " 'ประเทศสวิตเซอร์แลนด์ในโอลิมปิกฤดูหนาว1924',\n",
+       " 'ประเทศโมร็อกโกในโอลิมปิกฤดูหนาว1992',\n",
+       " 'ประเทศตูนิเซียในพาราลิมปิกฤดูร้อน2016',\n",
+       " 'ประเทศออสเตรียในโอลิมปิกฤดูร้อน1912',\n",
+       " 'ประเทศฟิลิปปินส์ในโอลิมปิกฤดูหนาว',\n",
+       " 'ประเทศโตโกในโอลิมปิก',\n",
+       " 'ประเทศบัลแกเรียในโอลิมปิกฤดูหนาว2022',\n",
+       " 'ประเทศจีนไทเปในโอลิมปิกฤดูร้อน1988']"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_samples(pratheet)"
    ]
   },
   {
